chaim-bprint-spec/tests/fixtures/valid/orders.bprint
{
  "schemaVersion": "1.0",
  "entityName": "Order",
  "description": "Basic order management system",
  "identity": { "fields": ["orderId"] },
  "fields": [
    { "name": "orderId", "type": "string", "required": true },
    { "name": "customerId", "type": "string", "required": true },
    { "name": "amount", "type": "number", "required": true },
    { "name": "currency", "type": "string", "required": false }
  ]
}
