chaim-bprint-spec/tests/fixtures/invalid/invalid-string-constraint-on-number.bprint
{
  "schemaVersion": "1.0",
  "entityName": "Invalid",
  "description": "Invalid: minLength constraint on number field",
  "identity": { "fields": ["id"] },
  "fields": [
    {
      "name": "id",
      "type": "string",
      "required": true
    },
    {
      "name": "quantity",
      "type": "number",
      "required": true,
      "constraints": {
        "minLength": 5
      }
    }
  ]
}
